--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <title>Kana Trainer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <!-- Bootstrap 5.3 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+
   <!-- HEADER -->
   <header class="sticky-header py-2 border-bottom">
     <div class="container">
@@ -43,9 +43,11 @@
 
       <!-- SETTINGS CARD -->
       <div class="settings-card p-3 p-md-4 mb-4">
-        <div class="row controls-row align-items-end mb-3">
 
-          <div class="col-12 col-md-3">
+        <div class="row g-3 align-items-end flex-nowrap overflow-auto pb-1">
+
+          <!-- Kana type -->
+          <div class="col-auto">
             <label for="kanaType" class="form-label mb-1">Kana type</label>
             <select id="kanaType" class="form-select form-select-sm">
               <option value="hiragana">Hiragana</option>
@@ -53,8 +55,16 @@
             </select>
           </div>
 
-          <!-- NEW FONT SELECT -->
-          <div class="col-12 col-md-2">
+          <!-- Dakuten switch -->
+          <div class="col-auto">
+            <label class="form-label mb-1">Dakuten</label>
+            <div class="form-check form-switch m-0">
+              <input class="form-check-input" type="checkbox" id="chkDakuten">
+            </div>
+          </div>
+
+          <!-- Font -->
+          <div class="col-auto">
             <label for="fontSelect" class="form-label mb-1">Font</label>
             <select id="fontSelect" class="form-select form-select-sm">
               <option value="Noto Sans JP" selected>Noto Sans JP</option>
@@ -64,9 +74,9 @@
             </select>
           </div>
 
-          <div class="col-12 col-md-3 py-3 py-md-0">
+          <!-- Seed -->
+          <div class="col">
             <label for="seedInput" class="form-label mb-1">Seed (a–z, 0–9)</label>
-
             <div class="input-group input-group-sm">
               <input type="text" id="seedInput" class="form-control seed-input"
                      placeholder="e.g. kana2026" autocomplete="off" />
@@ -76,16 +86,19 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 d-flex flex-wrap gap-2 mt-2 mt-md-0">
-            <button id="btnGenerate" class="btn btn-sm btn-secondary">
-              <i class="fa-solid fa-shuffle me-1"></i> Regenerate
-            </button>
-            <button id="btnToggleRomaji" class="btn btn-sm btn-outline-primary">
-              <i class="fa-solid fa-language me-1"></i> Romaji
-            </button>
-            <button id="btnCopyLink" class="btn btn-sm btn-outline-dark">
-              <i class="fa-solid fa-link me-1"></i> Copy link
-            </button>
+          <!-- Buttons -->
+          <div class="col-auto d-flex align-items-end">
+            <div class="d-flex gap-2 flex-nowrap">
+              <button id="btnGenerate" class="btn btn-sm btn-secondary">
+                <i class="fa-solid fa-shuffle me-1"></i> Regenerate
+              </button>
+              <button id="btnToggleRomaji" class="btn btn-sm btn-outline-primary">
+                <i class="fa-solid fa-language me-1"></i> Romaji
+              </button>
+              <button id="btnCopyLink" class="btn btn-sm btn-outline-dark">
+                <i class="fa-solid fa-link me-1"></i> Copy link
+              </button>
+            </div>
           </div>
 
         </div>
@@ -100,7 +113,7 @@
   </main>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Custom JS -->
   <script src="script.js"></script>
