--- a/index.html
+++ b/index.html
@@ -5,21 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kana Shuffle</title>
 
-  <!-- Favicon (inline SVG, no extra file needed) -->
   <link rel="icon" type="image/svg+xml"
         href='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128"><defs><linearGradient id="g" x1="0" x2="1" y1="0" y2="1"><stop offset="0" stop-color="%2357d37a"/><stop offset="1" stop-color="%233b82f6"/></linearGradient></defs><rect width="128" height="128" rx="28" fill="url(%23g)"/><circle cx="104" cy="28" r="10" fill="%23ffffff" opacity="0.85"/><path d="M20 92c10-22 24-34 44-36 18-2 28 6 44 10" fill="none" stroke="%23ffffff" stroke-width="10" stroke-linecap="round" opacity="0.25"/><text x="64" y="78" text-anchor="middle" font-family="system-ui,Segoe UI,Arial" font-size="52" font-weight="800" fill="%23ffffff">かな</text></svg>' />
 
-  <!-- Bootstrap 5.3 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body class="bg-body">
-  <!-- Sticky top bar (timer + settings always visible) -->
-  <header class="sticky-top border-bottom bg-body-tertiary bg-opacity-75 glass">
+  <header id="topHeader" class="sticky-top border-bottom bg-body-tertiary bg-opacity-75 glass">
     <div class="container py-2">
       <div class="d-flex align-items-center justify-content-between gap-2">
         <div class="d-flex align-items-center gap-2">
@@ -32,7 +27,6 @@
             <i class="fa-solid fa-sliders"></i>
           </button>
 
-          <!-- Hidden on small screens to keep header clean -->
           <div class="d-none d-md-block">
             <div class="fw-semibold lh-1" id="txtTitle">Kana Shuffle</div>
             <div class="small text-secondary" id="seedHint"></div>
@@ -41,7 +35,7 @@
 
         <div class="d-flex align-items-center gap-2">
           <div class="timer px-3 py-2 rounded-3 border bg-body" aria-label="Timer">
-            <span class="timer-mono" id="timerDisplay">00:01:00</span>
+            <span class="timer-mono" id="timerDisplay">01:00</span>
           </div>
 
           <button id="btnPlayPause" class="btn btn-primary btn-icon" type="button" aria-label="Start or pause timer">
@@ -55,18 +49,17 @@
     </div>
   </header>
 
-  <!-- Main -->
   <main class="container my-3 my-md-4">
     <div class="card shadow-sm border-0 overflow-hidden">
       <div class="card-body p-3 p-md-4">
         <div class="d-flex align-items-center justify-content-between flex-wrap gap-2 mb-3">
           <div class="main-actions">
             <button id="btnToggleRomaji" class="btn btn-outline-secondary btn-mobile-compact main-action-btn" aria-pressed="false">
-              <i class="fa-solid fa-eye me-2"></i><span id="txtRomaji">Romaji</span>
+              <i class="fa-solid fa-language me-2"></i><span id="txtRomaji">Romaji</span>
             </button>
 
-            <button id="btnCopyLink" class="btn btn-outline-secondary btn-mobile-compact main-action-btn">
-              <i class="fa-solid fa-link me-2"></i><span id="txtCopyLink">Copy link</span>
+            <button id="btnToggleNumbers" class="btn btn-outline-secondary btn-mobile-compact main-action-btn" aria-pressed="false">
+              <i class="fa-solid fa-hashtag me-2"></i><span id="txtNumbers">Numbers</span>
             </button>
           </div>
 
@@ -77,6 +70,7 @@
 
         <div id="kanaCard" class="kana-card rounded-4 p-2 p-md-3">
           <div id="kanaGrid" class="kana-grid" role="grid" aria-label="Kana grid"></div>
+          <div id="scrollSentinel" class="scroll-sentinel" aria-hidden="true"></div>
         </div>
 
         <div class="small text-secondary mt-3" id="txtTip"></div>
@@ -84,7 +78,6 @@
     </div>
   </main>
 
-  <!-- Settings offcanvas -->
   <div class="offcanvas offcanvas-start" tabindex="-1" id="settings" aria-labelledby="settingsLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="settingsLabel">Settings</h5>
@@ -93,6 +86,7 @@
 
     <div class="offcanvas-body">
       <div class="vstack gap-3">
+
         <div>
           <label class="form-label fw-semibold" id="lblLang">Language</label>
           <select id="langSelect" class="form-select">
@@ -121,11 +115,29 @@
         </div>
 
         <div>
+          <label class="form-label fw-semibold" id="lblTimerTitle"></label>
+          <div class="input-group">
+            <input id="timerInput" class="form-control seed-mono" type="time" step="1" value="01:00" aria-label="Timer length">
+            <button id="btnTimerReset" class="btn btn-outline-secondary" type="button">
+              <i class="fa-solid fa-rotate-left me-2"></i><span id="txtTimerReset"></span>
+            </button>
+          </div>
+        </div>
+
+        <div class="d-flex align-items-center justify-content-between gap-3">
+          <div>
+            <div class="fw-semibold" id="lblGauntletTitle"></div>
+            <div class="small text-secondary" id="lblGauntletDesc"></div>
+          </div>
+          <div class="form-check form-switch m-0">
+            <input class="form-check-input" type="checkbox" role="switch" id="chkEndless">
+          </div>
+        </div>
+
+        <div>
           <label class="form-label fw-semibold" id="lblRowsTitle"></label>
           <div class="small text-secondary mb-2" id="lblRowsDesc"></div>
-
           <div id="rowFilterBox" class="row g-2"></div>
-
           <div class="d-flex gap-2 mt-2">
             <button id="btnRowsAll" class="btn btn-outline-secondary btn-sm" type="button"></button>
             <button id="btnRowsNone" class="btn btn-outline-secondary btn-sm" type="button"></button>
@@ -159,6 +171,12 @@
           </div>
         </div>
 
+        <div class="d-grid">
+          <button id="btnCopyLink" class="btn btn-outline-secondary" type="button">
+            <i class="fa-solid fa-link me-2"></i><span id="txtCopyLink">Copy link</span>
+          </button>
+        </div>
+
         <hr class="my-2">
 
         <div class="d-flex align-items-center justify-content-between gap-3">
@@ -176,11 +194,30 @@
             <span id="txtResetPrefs"></span>
           </button>
         </div>
+
       </div>
     </div>
   </div>
 
-  <!-- Toasts -->
+  <div class="modal fade" id="timesUpModal" tabindex="-1" aria-labelledby="timesUpTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="timesUpTitle"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="timesup-emoji" aria-hidden="true">⏱️✨</div>
+          <div class="timesup-text" id="timesUpBody"></div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" id="timesUpNext"></button>
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal" id="timesUpClose"></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="toast-container position-fixed bottom-0 end-0 p-3">
     <div id="appToast" class="toast" role="status" aria-live="polite" aria-atomic="true">
       <div class="toast-header">
